--- a/healthyEating.html
+++ b/healthyEating.html
@@ -93,7 +93,7 @@ and open the template in the editor.
                 <h4>Navigation</h4>
                 <a href="index.html">Home</a><br>
                 <a href="healthyEating.html">Healthy Eating</a><br>
-                <a href="getFit.html">Get Fit</a><br>
+                <a href="fitness.html">Get Fit</a><br>
                 <a href="bmiCalc.html">BMI Calculator</a><br>
                 <a href="admin.html">Admin home</a>
             </div>
